package common.request;

public class CommandRequest extends Request {
    public CommandRequest(String commandName) {
        super(commandName);
    }
}