package model;

/**
 * Типы организаций.
 */
public enum OrganizationType {
    COMMERCIAL,
    TRUST,
    PRIVATE_LIMITED_COMPANY;
}